--- a/.github/workflows/BasicSample.yaml
+++ b/.github/workflows/BasicSample.yaml
@@ -23,6 +23,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: java
+          queries: +security-and-quality        
 
       - name: Copy CI gradle.properties
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
@@ -33,39 +39,9 @@ jobs:
           distribution: 'zulu'
           java-version: 11
 
-      - name: Generate cache key
-        run: ./scripts/checksum.sh $SAMPLE_PATH checksum.txt
-
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches/modules-*
-            ~/.gradle/caches/jars-*
-            ~/.gradle/caches/build-cache-*
-          key: gradle-${{ hashFiles('checksum.txt') }}
-
       - name: Build project
         working-directory: ${{ env.SAMPLE_PATH }}
         run: ./gradlew assembleDebug lintDebug --stacktrace
-
-      - name: Run instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 26
-          arch: x86
-          disable-animations: true
-          script: ./gradlew connectedCheck --stacktrace
-          working-directory: ${{ env.SAMPLE_PATH }}
-
-      - name: Upload build outputs (APKs)
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-outputs-BasicSample
-          path: ${{ env.SAMPLE_PATH }}/app/build/outputs
-
-      - name: Upload build reports
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-reports-BasicSample
-          path: ${{ env.SAMPLE_PATH }}/app/build/reports
+        
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2        
