allow manual trigger

--- a/.github/workflows/TwoWaySample.yaml
+++ b/.github/workflows/TwoWaySample.yaml
@@ -11,6 +11,7 @@ on:
     paths:
       - '.github/workflows/TwoWaySample.yaml'
       - 'TwoWaySample/**'
+  workflow_dispatch:
 
 env:
   SAMPLE_PATH: TwoWaySample
