--- a/.github/workflows/TwoWaySample.yaml
+++ b/.github/workflows/TwoWaySample.yaml
@@ -13,8 +13,13 @@ env:
 
 jobs:
   build_and_test:
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     timeout-minutes: 30
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
 
     steps:
       - name: Checkout
